<resources>
    <string name="app_name">OCCPT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="lorem_ipsum_title">Lorem Ipsum</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book</string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About Us</string>
    <string name="menu_find_child_care">Events/Trainings</string>
    <string name="menu_resources">Resources</string>
    <string name="menu_grants">Grants</string>
    <string name="menu_benefits">Benefits</string>
    <string name="menu_education">Join AFSCME</string>
    <string name="menu_join_afscme">Join AFSCME</string>
    <string name="menu_contact">Contact Us</string>
    <string name="open_local_pdf">Open Local PDF</string>
    <string name="logo_description">App Logo</string>
    <string name="overflow_menu_description">More options</string>
    <string name="benefits_title">Benefits</string>
    <string name="healthiest_you_logo_description">HealthiestYou Logo</string>
    <string name="click_for_more_info">Click for more info</string>
    <string name="click_for_faqs">Click here for FAQ\'s</string>
    <string name="who_we_are">WHO WE ARE</string>
    <string name="about_us_title">ABOUT US</string>
    <string name="about_us_text">AFSCME Child Care Providers Together is the union for Oregon\'s family child care providers. We know Oregon doesn\'t work without child care, and we connect families with union child care providers across Oregon. Families choose to find child care through AFSCME-CCPT because our member providers offer high-quality, developmentally appropriate, affordable care. When providers join us, they don\'t just enjoy the benefits of joining a union — they join a network of union families across the state.</string>
    <string name="what_our_members_say_title">WHAT OUR MEMBERS SAY:</string>
    <string name="member_1_quote">"I am Registered family daycare which allows me to care for a maximum of 10 children. I am a member of Oregon Child Care Providers Together because it is smaller family child care homes that provide specialized and individualized care, who need to be supported so we can grow our business or feel supported as a business owner."</string>
    <string name="member_1_name">- Rachael Lamet</string>
    <string name="member_2_quote">"We call our program, not a daycare, not a business but our labor of love. Love is the main reason why we do what we do. Our goal is not only to be the child care providers but to be like a second family to our children. We joined the union because in difficult times we know they have our backs!"</string>
    <string name="member_2_name">- Ali &amp; Brenda Sanz</string>
    <string name="member_3_quote">"Our certified family facility provides 24/7 care for infants, toddlers, preschoolers and school-aged children. We work hard to meet families needs and the needs of the children we care for. The union provides many training sessions, free to our members, so we and our staff can meet our training requirements to remain licensed and to always be improving our quality of care."</string>
    <string name="member_3_name">- Anita Bates &amp; James Hunter</string>
    <string name="privacy_policy">Privacy Policy | Politica de Privacidad</string>
    <string name="our_officers_staff">Our Officers &amp; Staff</string>
    <string name="join_the_union">Join the Union</string>
    <string name="our_officers_staff_title">Our Officers and Staff</string>
    <string name="officer_name_placeholder">Officer Name</string>
    <string name="officer_title_placeholder">Officer Title</string>
    <string name="officer_photo_content_description">Photo of the officer</string>
    <string name="call_officer_content_description">Call officer</string>
    <string name="email_officer_content_description">Email officer</string>
    <string name="add_officer_contact_content_description">Add officer to contacts</string>
    <string name="join_afscme_title">BECOME A UNION CHILD CARE PROVIDER</string>
    <string name="join_afscme_subtitle">Learn more about how being part of Oregon Child Care Providers Together family helps to you and the families you care for. Because we know Oregon does it work with all of us!</string>
    <string name="join_afscme_button_1">REGISTERED FAMILY &amp; CERTIFIED FAMILY LICENSED PROVIDERS\nJOIN OUR UNION</string>
    <string name="join_afscme_members_get_title">HERE\'S WHAT MEMBERS GET:</string>
    <string name="join_afscme_members_get_body"><![CDATA[From promotion of your program to other union members and the general public looking for high-quality in-home care.<br><br>• Voice to improve the licensed exempt family child care profession over the state of Oregon.<br>• Free trainings you can do at home, or later to grow your program, see your professional education to yourself.<br>• <a href="https://www.afscme.org/college">Access to a free college program</a> to credentialize for you and your partners.<br>• Free course Register of competence in serving a family child care program.<br>• Free and discounted services such as <a href="https://shieldbenefits.com/oregonafscme/overview">legal services</a>, accidental insurance, and <a href="https://partner.healthiestyou.com/view/s.aspx?id=5771555d309f920d3cff1476">health services</a>, and much <a href="https://www.afscme.org/member-resources/afscme-advantage">more</a>.<br>• Union representation wrestling with you for your rights.]]></string>
    <string name="join_afscme_button_2">LICENSED &amp; LOCAL PROVIDERS - JOIN OUR UNION</string>
    <string name="join_afscme_testimonial_1_quote">"When you are a provider, it is easy to feel alone, we don\'t know who to trust or turn to for help. With our union, we have each other\'s backs and a community we can count on. It has been so helpful to have that support system that we can rely on for help and we know they have our interests at heart."</string>
    <string name="join_afscme_testimonial_1_name">- A &amp; R Family Care</string>
    <string name="join_afscme_testimonial_2_quote">"The union has created a space for us to learn, grow, and stay connected to other providers. We are no longer working in isolation but as a united group, working to make things better for providers, kids, and families in our communities. I have grown so much as a provider and a person thanks to our union!"</string>
    <string name="join_afscme_testimonial_2_name">- Maria Belen C. Owner/Provider</string>
    <string name="join_afscme_testimonial_3_quote">"I am Registered Family provider who also care for my own children with autism. As a member of Oregon Child Care Providers Together because it is single-handedly what is making the profession more professional and with our union behind me, I get paid for the recognizes the importance of the hard work I put into my child care business."</string>
    <string name="join_afscme_testimonial_3_name">- Anne-Marie L.</string>
    <string name="contact_banner_text">OREGON DOESN\'T\nWORK WITHOUT YOU</string>
    <string name="contact_update_info_text">Keep your information current in our public child care provider directory.</string>
    <string name="contact_update_info_button">Update My Information</string>
    <string name="contact_resources_title">RESOURCES FOR MEMBERS ONLY</string>
    <string name="contact_resources_text">• Sign up for <![CDATA[<a href="https://www.afscme.org/member-resources/free-trainings">free trainings</a>]]> you can do at home on how to grow your program, run your business and advocate for yourself\n• Access to <![CDATA[<a href="https://www.afscme.org/member-resources/scholarships">scholarship funds</a>]]> for professional development including college courses\n• Connect with <![CDATA[<a href="https://www.afscme.org/member-resources/afscme-advantage">free and discounted services</a>]]>\n• Your <![CDATA[<a href="https://www.afscme.org/about/governance/constitution/bill-of-rights-for-members">Provider Bill of Rights</a>]]></string>
    <string name="contact_share_text">Know other providers who should join AFSCME? SHARE this page with your Facebook friends.</string>
    <string name="contact_share_button">Share</string>
    <string name="contact_questions_title">HAVE QUESTIONS?</string>
    <string name="contact_questions_text">Visit our local’s website: <![CDATA[<a href="http://oregonccpt.com/">http://oregonccpt.com/</a>]]>\n\nWe have people available to answer any questions you may have about your union membership. Contact our Member Services Center at 1-844-758-6466 or <![CDATA[<a href="mailto:MSC@oregonafscme.org">MSC@oregonafscme.org</a>]]></string>
    <string name="facebook_icon_description">Facebook</string>
    <string name="twitter_icon_description">Twitter</string>
    <string name="resources_fragment">Resources Fragment</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Log Out</string>
    <string name="menu_login">Login</string>
    <string name="facebook_login_description">Facebook Login</string>
    <string name="google_login_description">Google Login</string>
    <string name="registration_create_account_title">Create Account</string>
    <string name="registration_first_name_hint">First Name*</string>
    <string name="registration_last_name_hint">Last Name*</string>
    <string name="registration_address_hint">Address*</string>
    <string name="registration_city_hint">City*</string>
    <string name="registration_state_hint">State*</string>
    <string name="registration_postal_code_hint">Postal Code*</string>
    <string name="registration_county_hint">County*</string>
    <string name="registration_country_hint">Country</string>
    <string name="registration_phone_hint">Phone</string>
    <string name="registration_receive_text_alerts">Receive Text Alerts</string>
    <string name="registration_email_hint">Email Address*</string>
    <string name="registration_confirm_email_hint">Confirm Email Address*</string>
    <string name="registration_email_view">Allow other members to view my email address</string>
    <string name="registration_subscribe_to_email_list">Subscribe to Email List</string>
    <string name="registration_select_roles_title">Select your role(s)</string>
    <string name="registration_union_member">Union Member of Local 132 (AFSCME)</string>
    <string name="registration_parent">Parent Looking for Child Care</string>
    <string name="registration_registered_provider">Registered Family Provider (RF)</string>
    <string name="registration_certified_provider">Certified Family Provider (CF)</string>
    <string name="registration_certified_center">Certified Center </string>
    <string name="registration_unlicensed_provider">Unlicensed Provider</string>
    <string name="registration_username_hint">Create your Username*</string>
</resources>