<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_grants"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/menu_grants" />
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/menu_education" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/menu_contact" />
    </group>
</menu>