<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.oregonccpt.occpt.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="org.oregonccpt.occpt.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_grants"
        android:name="org.oregonccpt.occpt.ui.grants.GrantsFragment"
        android:label="@string/menu_grants"
        tools:layout="@layout/fragment_grants" />

    <fragment
        android:id="@+id/nav_education"
        android:name="org.oregonccpt.occpt.ui.education.EducationFragment"
        android:label="@string/menu_education"
        tools:layout="@layout/fragment_education" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="org.oregonccpt.occpt.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>