<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.joinafscme.JoinPILLARSFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/join_afscme_title"
                android:scaleType="centerCrop"
                android:src="@drawable/home_2019_december_mtg_training" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="397dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:shadowColor="#1A1919"
                    android:shadowRadius="2"
                    android:text="@string/join_afscme_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="388dp"
            android:layout_height="63dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/join_afscme_subtitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_afscme_members_get_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/members_get_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/join_afscme_members_get_body"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/join_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_afscme_button_2"
                android:layout_marginBottom="24dp"/>

            <!-- Testimonial 1 -->

            <!-- Testimonial 2 -->

            <!-- Testimonial 3 -->

        </LinearLayout>
    </LinearLayout>
</ScrollView>